Fix text overflow in withdrawals table

--- a/packages/web/src/pages/purchases-and-sales/PurchasesAndSalesTable.module.css
+++ b/packages/web/src/pages/purchases-and-sales/PurchasesAndSalesTable.module.css
@@ -1,8 +1,8 @@
-.cellRoot, .nameContainer {
+.cellRoot, .textContainer {
   max-width: 100%;
 }
 
-.name {
+.text {
   overflow: hidden;
   text-overflow: ellipsis;
 }
